--- a/index.html
+++ b/index.html
@@ -42,72 +42,57 @@
       </p>
       <h2>PASEN Y PIDANLE AL CANTINERO LO QUE QUIERAN</h2>
       <br>
-      <p>Pidiendole una botella de cerveza, seras invitado charlar con nosotros así podremos tomar en cuenta tu opinion en futuros strems</p>
-      <p>Tomando el daiquiri podras ver los videos resubidos de twitch</p>
-      <p>Escogiendo el fernet vas poder conocer a Los Satanás</p>
-      <p>Y clickando en nuestro icono de TW podras ir a nuestro canal rapidamente</p>
+      <p>Pidiendole una botella de cerveza, seras invitado charlar con nosotros así podremos tomar en cuenta tu opinion en futuros strems.</p>
+      <p>Tomando el daiquiri podras ver los videos resubidos de twitch.</p>
+      <p>Escogiendo el fernet vas poder conocer a Los Satanás.</p>
+      <p>Y clickando en nuestro icono de TW podras ir a nuestro canal rapidamente.</p>
     </div>
-    <div class="container">
-    <div class="dropdown d-lx-none">
-      <button
-    type="button"
-    class="btn btn-primary"
-    data-bs-toggle="modal"
-    data-bs-target="#staticBackdrop"
-    >
-    Videos Resubidos
-    </button>
-    <div
-    class="modal fade"
-    id="staticBackdrop"
-    data-bs-backdrop="static"
-    data-bs-keyboard="false"
-    tabindex="-1"
-    aria-labelledby="staticBackdropLabel"
-    aria-hidden="true"
-    >
-    <div class="modal-dialog">
-    <div class="modal-content">
-    <div class="modal-header">
-      <h3 class="modal-title" id="staticBackdropLabel">Videos Resubidos</h3>
-      <button
-        type="button"
-        class="btn-close"
-        data-bs-dismiss="modal"
-        aria-label="Close"
-      ></button>
-    </div>
-    <div class="modal-body">
-      <div class="container">
-        <ul>
-          <li>
-            <a href="/TDS/pages/Videos resubidos/shyvana.html">Shyvana 3vs5</a>
-          </li>
-          <li><a href="/TDS/pages/Videos resubidos/pyke.html">Pyke R casi perfectas</a></li>
-          <li><a href="/TDS/pages/Videos resubidos/zed.html">Zed el mejor ninja</a></li>
-          <li>
-            <a href="/TDS/pages/Videos resubidos/problemasT.html"
-              >Problemas Tecnicos</a
-            >
-          </li>
-        </ul>
+    <div class="container dropdown d-md-none">
+      <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="10000">
+            <a href="/TDS/pages/charlemos.html" >
+              <img src="./images/botella 1.png" class="d-block" width="100" alt="botella">
+            </a>
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <a href="/TDS/pages/ListaDeVideos.html">
+              <img src="./images/copa.png" class="d-block" width="100" alt="copa">
+            </a>
+          </div>
+          <div class="carousel-item">
+            <a href="/TDS/pages/Integrantes.html">
+              <img src="./images/fernet.png" class="d-block" width="100" alt="fernet">
+            </a>
+          </div>
+          <div class="carousel-item">
+            <a href="https://www.twitch.tv/los_satanas" target="_blank" id="twitch">
+              <img src="./images/fondopioli.jpg" class="d-block" width="100" alt="canalTw">
+            </a>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
-    </div>
-    </div>
-    </div>
-    </div>
     </div> 
-    </div>
 
     <div class="container d-none d-md-block" >
       <div class="grid">
         <div class="trago">
-          <div class="trago__img"><a href="/TDS/pages/charlemos.html" >
+          <div class="trago__img">
+            <a href="/TDS/pages/charlemos.html" >
             <img src="/TDS/images/botella 1.png"width="100"height="300"alt="charlemos"
             /></a> </div>
           </div>
           <div class="trago">
-            <div class="trago__img"><a href="/TDS/pages/ListaDeVideos.html" >
+            <div class="trago__img">
+              <a href="/TDS/pages/ListaDeVideos.html">
               <img src="./images/copa.png" width="85"height="190"alt="Los videos"
               /></a> </div>
               
