--- a/pages/Integrantes.html
+++ b/pages/Integrantes.html
@@ -50,7 +50,59 @@
             llevara al correspondiente perfil de instagram
           </em>
         </p>
-        <div class="grid">
+        <div class="container dropdown d-md-none">
+          <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="10000">
+                <a href="https://www.instagram.com/caminoli96/" target="_blank">
+                  <img
+                  src="/TDS/images/LA TURCA.jpg"
+                  width="200"
+                  height="300"
+                  alt="LA TURCA"
+                  /></a>
+              </div>
+              <div class="carousel-item" data-bs-interval="2000">
+                <a href="https://www.instagram.com/camilaperetti97/" target="_blank">
+                  <img
+                  src="/TDS/images/LA GARGOLA.jpg"
+                  width="200"
+                  height="300"
+                  alt="LA GARGOLA"
+                  /></a>
+              </div>
+              <div class="carousel-item">
+                <a href="https://www.instagram.com/yagoricci/" target="_blank"
+                ><img
+                src="/TDS/images/EL BUITRE VIOLENTO.jpg"
+                width="200"
+                height="300"
+                alt="El BUITRE"
+                /></a>
+              </div>
+              <div class="carousel-item">
+                <a href="https://www.instagram.com/feliipeecg/" target="_blank">
+                  <img
+                  src="/TDS/images/EL CHIRUCITO.jpg"
+                  width="200"
+                  height="300"  
+                  alt="CHIRUCITO"
+                  />
+                </a>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div> 
+        
+        <div class="grid d-none d-md-block">
           <div class="Carta-derecho">
             <a href="https://www.instagram.com/caminoli96/" target="_blank">
               <img
