--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
       </p>
       <h2>PASEN Y PIDANLE AL CANTINERO LO QUE QUIERAN</h2>
       <br>
-      <p>Pidiendole una botella de cerveza, seras invitado charlar con nosotros así podremos tomar en cuenta tu opinion en futuros strems.</p>
-      <p>Tomando el daiquiri podras ver los videos resubidos de twitch.</p>
-      <p>Escogiendo el fernet vas poder conocer a Los Satanás.</p>
-      <p>Y clickando en nuestro icono de TW podras ir a nuestro canal rapidamente.</p>
+      <p>Pidiendole una botella de cerveza, seras invitado charlar con nosotros así podremos tomar en cuenta tu opinion en futuros strems</p>
+      <p>Tomando el daiquiri podras ver los videos resubidos de twitch</p>
+      <p>Escogiendo el fernet vas poder conocer a Los Satanás</p>
+      <p>Y clickando en nuestro icono de TW podras ir a nuestro canal rapidamente</p>
     </div>
     <div class="container dropdown d-md-none">
       <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
