--- a/pages/ListaDeVideos.html
+++ b/pages/ListaDeVideos.html
@@ -78,12 +78,12 @@
         <div class="container">
           <ul>
             <li>
-              <a href="/TDS/pages/Videos resubidos/shyvana.html">Shyvana 3vs5</a>
+              <a class="links" href="/TDS/pages/Videos resubidos/shyvana.html">Shyvana 3vs5</a>
             </li>
-            <li><a href="/TDS/pages/Videos resubidos/pyke.html">Pyke R casi perfectas</a></li>
-            <li><a href="/TDS/pages/Videos resubidos/zed.html">Zed el mejor ninja</a></li>
+            <li><a class="links" href="/TDS/pages/Videos resubidos/pyke.html">Pyke R casi perfectas</a></li>
+            <li><a class="links" href="/TDS/pages/Videos resubidos/zed.html">Zed el mejor ninja</a></li>
             <li>
-              <a href="/TDS/pages/Videos resubidos/problemasT.html"
+              <a class="links" href="/TDS/pages/Videos resubidos/problemasT.html"
                 >Problemas Tecnicos</a
               >
             </li>
