--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
   ></script>
     </head>
   <body>
-    <header>
+    <header class="header">
       <div class="container">
-        <h1>Bienvenidos a la Taberna de Sátanas</h1>
+        <h1 class="header__h1">Bienvenidos a la Taberna de Sátanas</h1>
       </div>
     </header>
     <div class="container">
-      <p class="arial">
+      <p>
         Sean todos bienvenidos a su futura taberna favorita, en donde vas a poder
         pasarte un rato para poder hablar con nosotros sobre todos los temas
         actuales y no tan actuales (mientra sean picantes)
@@ -81,7 +81,6 @@
         </button>
       </div>
     </div> 
-
     <div class="container d-none d-md-block" >
       <div class="grid">
         <div class="trago">
@@ -139,7 +138,6 @@
         </tr>
       </table>
     </div>
-    
   </body>
   </html>
     
