--- a/pages/ListaDeVideos.html
+++ b/pages/ListaDeVideos.html
@@ -32,10 +32,10 @@
     ></script>
     </head>
   <body>
-    <header>
+    <header class="header" >
       <div class="container">
-        <h1 class="italica"> Videos Resubidos</h1>
-        <div id="menu" class="menu">
+        <h1 class="header__h1"> Videos Resubidos</h1>
+        <div id="menu" class="header__menu">
           <nav class="d-none d-md-block  justify-content-between">        
             <ul> 
               <li><a href="/TDS/pages/Videos resubidos/shyvana.html">SHYVANA</a> </li>
@@ -129,8 +129,6 @@
         </button>
     </div>
       </div>
-
-
     </div>
     <footer>
       <div class="container">
