--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style/Cantinero.css".css">
+    <link rel="stylesheet" href="./style/styles.css">
     <title>Cantinero</title>
     <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
@@ -40,7 +40,7 @@
         pasarte un rato para poder hablar con nosotros sobre todos los temas
         actuales y no tan actuales (mientra sean picantes)
       </p>
-      <h2>PASEN Y PIDANLE AL CANTINERO LO QUE QUIERAN</h2>
+      <h2 class="container__h2">PASEN Y PIDANLE AL CANTINERO LO QUE QUIERAN</h2>
       <br>
       <p>Pidiendole una botella de cerveza, seras invitado charlar con nosotros así podremos tomar en cuenta tu opinion en futuros strems</p>
       <p>Tomando el daiquiri podras ver los videos resubidos de twitch</p>
