--- a/pages/Integrantes.html
+++ b/pages/Integrantes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/TDS/style/Integrantes.css" />
+    <link rel="stylesheet" href="/TDS/style/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -35,127 +35,146 @@
     ></script>
   </head>
   <body>
-    <div class="container">
-    <header>
-      <h1>Los Satanás</h1>
+    <header class="header">
+      <div class="container">
+        <h1 class="header__h1">Los Satanás</h1>
+      </div>
     </header>
-    <main>
-        <p>
-          Nosotros somos un grupito bastante normal conformado por una futura
-          veterinaria, dos intentos de contadores y una futura actriz.
-        </p>
-        <p>
-          <em
-            >Si quieres conocernos mejor poder clickear sobre LA CARTA y te
-            llevara al correspondiente perfil de instagram
-          </em>
-        </p>
-        <div class="container dropdown d-md-none">
-          <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active" data-bs-interval="10000">
-                <a href="https://www.instagram.com/caminoli96/" target="_blank">
-                  <img
+    <div class="container">
+      <p>
+        Nosotros somos un grupito bastante normal conformado por una futura
+        veterinaria, dos intentos de contadores y una futura actriz.
+      </p>
+      <p>
+        <em
+          >Si quieres conocernos mejor poder clickear sobre LA CARTA y te
+          llevara al correspondiente perfil de instagram
+        </em>
+      </p>
+      <div class="container dropdown d-md-none">
+        <div
+          id="carouselExampleInterval"
+          class="carousel slide"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="10000">
+              <a href="https://www.instagram.com/caminoli96/" target="_blank">
+                <img
                   src="/TDS/images/LA TURCA.jpg"
                   width="200"
                   height="300"
                   alt="LA TURCA"
-                  /></a>
-              </div>
-              <div class="carousel-item" data-bs-interval="2000">
-                <a href="https://www.instagram.com/camilaperetti97/" target="_blank">
-                  <img
-                  src="/TDS/images/LA GARGOLA.jpg"
-                  width="200"
-                  height="300"
-                  alt="LA GARGOLA"
-                  /></a>
-              </div>
-              <div class="carousel-item">
-                <a href="https://www.instagram.com/yagoricci/" target="_blank"
-                ><img
-                src="/TDS/images/EL BUITRE VIOLENTO.jpg"
-                width="200"
-                height="300"
-                alt="El BUITRE"
-                /></a>
-              </div>
-              <div class="carousel-item">
-                <a href="https://www.instagram.com/feliipeecg/" target="_blank">
-                  <img
-                  src="/TDS/images/EL CHIRUCITO.jpg"
-                  width="200"
-                  height="300"  
-                  alt="CHIRUCITO"
-                  />
-                </a>
-              </div>
+              /></a>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-        </div> 
-        <div class="d-none d-md-block">
-          <div class="grid ">
-            <div class="Carta-derecho">
-              <a href="https://www.instagram.com/caminoli96/" target="_blank">
+            <div class="carousel-item" data-bs-interval="2000">
+              <a
+                href="https://www.instagram.com/camilaperetti97/"
+                target="_blank"
+              >
                 <img
-                src="/TDS/images/LA TURCA.jpg"
-                width="200"
-                height="300"
-                alt="LA TURCA"
-                /></a>
-              </div>
-              <div class="Carta-derecho">
-                <a href="https://www.instagram.com/camilaperetti97/" target="_blank">
-                  <img
                   src="/TDS/images/LA GARGOLA.jpg"
                   width="200"
                   height="300"
                   alt="LA GARGOLA"
-                  /></a>
-                </div>
-                <div class="Carta-izquierdo">
-                  <a href="https://www.instagram.com/yagoricci/" target="_blank"
-                  ><img
+              /></a>
+            </div>
+            <div class="carousel-item">
+              <a href="https://www.instagram.com/yagoricci/" target="_blank"
+                ><img
                   src="/TDS/images/EL BUITRE VIOLENTO.jpg"
                   width="200"
                   height="300"
                   alt="El BUITRE"
-                  /></a>
-                </div>
-                <div class="Carta-izquierdo">
-                  <a href="https://www.instagram.com/feliipeecg/" target="_blank">
-                    <img
-                    src="/TDS/images/EL CHIRUCITO.jpg"
-                    width="200"
-                    height="300"  
-                    alt="CHIRUCITO"
-                    />
-                  </a>
-                </div>
-              </div>
-
-        </div>
-        
-          </div>
-          
-          <footer>
-            <div class="container">
-              <a href="/TDS/index.html"
-                ><img
-                  src="/TDS/images/ATRAS.png"
-                  width="200"
-                  height="150"
-                  alt="volvamos al menu"
               /></a>
             </div>
-          </footer>
+            <div class="carousel-item">
+              <a href="https://www.instagram.com/feliipeecg/" target="_blank">
+                <img
+                  src="/TDS/images/EL CHIRUCITO.jpg"
+                  width="200"
+                  height="300"
+                  alt="CHIRUCITO"
+                />
+              </a>
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleInterval"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleInterval"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+      <div class="d-none d-md-block">
+        <div class="grid">
+          <div class="Carta-derecho">
+            <a href="https://www.instagram.com/caminoli96/" target="_blank">
+              <img
+                src="/TDS/images/LA TURCA.jpg"
+                width="200"
+                height="300"
+                alt="LA TURCA"
+            /></a>
+          </div>
+          <div class="Carta-derecho">
+            <a
+              href="https://www.instagram.com/camilaperetti97/"
+              target="_blank"
+            >
+              <img
+                src="/TDS/images/LA GARGOLA.jpg"
+                width="200"
+                height="300"
+                alt="LA GARGOLA"
+            /></a>
+          </div>
+          <div class="Carta-izquierdo">
+            <a href="https://www.instagram.com/yagoricci/" target="_blank"
+              ><img
+                src="/TDS/images/EL BUITRE VIOLENTO.jpg"
+                width="200"
+                height="300"
+                alt="El BUITRE"
+            /></a>
+          </div>
+          <div class="Carta-izquierdo">
+            <a href="https://www.instagram.com/feliipeecg/" target="_blank">
+              <img
+                src="/TDS/images/EL CHIRUCITO.jpg"
+                width="200"
+                height="300"
+                alt="CHIRUCITO"
+              />
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <footer>
+      <div class="container">
+        <a href="/TDS/index.html"
+          ><img
+            src="/TDS/images/ATRAS.png"
+            width="200"
+            height="150"
+            alt="volvamos al menu"
+        /></a>
+      </div>
+    </footer>
   </body>
 </html>
