--- a/pages/ListaDeVideos.html
+++ b/pages/ListaDeVideos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/TDS/style/main.css">
+    <link rel="stylesheet" href="/TDS/style/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Uchen&display=swap" rel="stylesheet">
@@ -36,7 +36,7 @@
       <div class="container">
         <h1 class="header__h1"> Videos Resubidos</h1>
         <div id="menu" class="header__menu">
-          <nav class="d-none d-md-block  justify-content-between">        
+          <nav class="navegacion d-none d-md-block  justify-content-between">        
             <ul> 
               <li><a href="/TDS/pages/Videos resubidos/shyvana.html">SHYVANA</a> </li>
             <li><a href="/TDS/pages/Videos resubidos/pyke.html">PYKE</a></li>
@@ -98,7 +98,7 @@
       <br>
     </header>
     <div class="container">
-        <p class="arial">
+        <p>
           Si no pudiste estar en el directo, aca te dejamos los mejores momentos/ jugadas para que las puedas disfrutar
         </p>
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
