--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
       <div class="grid">
         <div class="trago">
           <div class="trago__img">
-            <a href="/TDS/pages/charlemos.html" >
-            <img src="/TDS/images/botella 1.png"width="100"height="300"alt="charlemos"
+            <a href="./pages/charlemos.html" >
+            <img src="./images/botella 1.png"width="100"height="300"alt="charlemos"
             /></a> </div>
           </div>
           <div class="trago">
             <div class="trago__img">
-              <a href="/TDS/pages/ListaDeVideos.html">
+              <a href="./pages/ListaDeVideos.html">
               <img src="./images/copa.png" width="85"height="190"alt="Los videos"
               /></a> </div>
               
@@ -112,7 +112,7 @@
                 <div class="trago__img">
                   <a href="https://www.twitch.tv/los_satanas" target="_blank" id="twitch">
                     <img
-                    src="/TDS/images/fondopioli.jpg"
+                    src="./images/fondopioli.jpg"
                     width="200"
                     height="200"
                     alt="canalTw"
