--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </div>
             <div class="trago">
               <div class="trago__img">
-                <a href="/TDS/pages/Integrantes.html">
+                <a href="./pages/Integrantes.html">
                   <img
                   src="./images/fernet.png"
                   width="85"
