--- a/pages/ListaDeVideos.html
+++ b/pages/ListaDeVideos.html
@@ -113,7 +113,7 @@
             <img src="https://images5.alphacoders.com/983/983436.jpg " data-bs-interval="100"class="d-block w-100" alt="pyke">
           </div>
           <div class="carousel-item">
-            <img src="/TDS/images/La caja.jpg" data-bs-interval="100" height="500vh" class="d-block w-100" alt="charlas">
+            <img src="/TDS/images/LaCaja.jpg" data-bs-interval="100" height="400vh" class="d-block w-100" alt="charlas">
           </div>
           <div class="carousel-item active">
             <img src="/TDS/images/taberna.jpeg" data-bs-interval="100" class="d-block w-100" alt="copitas">
