--- a/pages/ListaDeVideos.html
+++ b/pages/ListaDeVideos.html
@@ -36,15 +36,15 @@
       <div class="container">
         <h1 class="header__h1"> Videos Resubidos</h1>
         <div id="menu" class="header__menu">
-          <nav class="navegacion d-none d-md-block  justify-content-between">        
+          <nav class="navegacion d-none d-md-block  justify-content-between">
             <ul> 
-              <li><a href="/TDS/pages/Videos resubidos/shyvana.html">SHYVANA</a> </li>
-            <li><a href="/TDS/pages/Videos resubidos/pyke.html">PYKE</a></li>
-            <li><a href="/TDS/pages/Videos resubidos/zed.html">ZED</a></li>
-            <li><a href="/TDS/pages/Videos resubidos/problemasT.html">PROBLEMAS T</a></li>
-          </ul>
-        </div>
-      </nav>
+              <li><a href="/TDS/pages/VideosResubidos/shyvana.html">SHYVANA</a> </li>
+              <li><a href="/TDS/pages/VideosResubidos/pyke.html">PYKE</a></li>
+              <li><a href="/TDS/pages/VideosResubidos/zed.html">ZED</a></li>
+              <li><a href="/TDS/pages/VideosResubidos/problemasT.html">PROBLEMAS T</a></li>
+            </ul>
+          </nav>    
+          </div>
       <div class="dropdown d-md-none">
         <button
   type="button"
