--- a/pages/ListaDeVideos.html
+++ b/pages/ListaDeVideos.html
@@ -30,7 +30,7 @@
       integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
       crossorigin="anonymous"
     ></script>
-    </head>
+  </head>
   <body>
     <header class="header" >
       <div class="container">
@@ -143,3 +143,4 @@
       </footer>
   
   </body>
+</html>
