--- a/pages/charlemos.html
+++ b/pages/charlemos.html
@@ -173,7 +173,7 @@
 <br>
     <footer>
       <div class="container">
-        <a href="/TDS/index.html"><img src="/TDS/images/ATRAS.png" width="200"height="150"alt="volvamos al menu"/></a>
+        <a href="../index.html"><img src="/TDS/images/ATRAS.png" width="200"height="150"alt="volvamos al menu"/></a>
       </div>
     </footer>
   </body>
