--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
       <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="10000">
-            <a href="/TDS/pages/charlemos.html" >
+            <a href="./pages/charlemos.html" >
               <img src="./images/botella1.png" class="d-block" width="100" alt="botella">
             </a>
           </div>
           <div class="carousel-item" data-bs-interval="2000">
-            <a href="/TDS/pages/ListaDeVideos.html">
+            <a href="./pages/ListaDeVideos.html">
               <img src="./images/copa.png" class="d-block" width="100" alt="copa">
             </a>
           </div>
           <div class="carousel-item">
-            <a href="/TDS/pages/Integrantes.html">
+            <a href="./pages/Integrantes.html">
               <img src="./images/fernet.png" class="d-block" width="100" alt="fernet">
             </a>
           </div>
