--- a/pages/Integrantes.html
+++ b/pages/Integrantes.html
@@ -61,7 +61,7 @@
             <div class="carousel-item active" data-bs-interval="10000">
               <a href="https://www.instagram.com/caminoli96/" target="_blank">
                 <img
-                  src="/TDS/images/LA TURCA.jpg"
+                  src="../images/LaTurca.jpg"
                   width="200"
                   height="300"
                   alt="LA TURCA"
@@ -73,7 +73,7 @@
                 target="_blank"
               >
                 <img
-                  src="/TDS/images/LA GARGOLA.jpg"
+                  src="../images/LaGargola.jpg"
                   width="200"
                   height="300"
                   alt="LA GARGOLA"
@@ -82,7 +82,7 @@
             <div class="carousel-item">
               <a href="https://www.instagram.com/yagoricci/" target="_blank"
                 ><img
-                  src="/TDS/images/EL BUITRE VIOLENTO.jpg"
+                  src="../images/ElRicci.jpg"
                   width="200"
                   height="300"
                   alt="El BUITRE"
@@ -91,7 +91,7 @@
             <div class="carousel-item">
               <a href="https://www.instagram.com/feliipeecg/" target="_blank">
                 <img
-                  src="/TDS/images/EL CHIRUCITO.jpg"
+                  src="../images/ElChirucito.jpg"
                   width="200"
                   height="300"
                   alt="CHIRUCITO"
@@ -167,9 +167,9 @@
 
     <footer>
       <div class="container">
-        <a href="/TDS/index.html"
+        <a href="../index.html"
           ><img
-            src="/TDS/images/ATRAS.png"
+            src="../images/ATRAS.png"
             width="200"
             height="150"
             alt="volvamos al menu"
