--- a/pages/VideosResubidos/problemasT.html
+++ b/pages/VideosResubidos/problemasT.html
@@ -38,10 +38,10 @@
         <div id="menu" class="header__menu">
           <nav class="navegacion d-none d-md-block  justify-content-between">
             <ul> 
-              <li><a href="/TDS/pages/VideosResubidos/shyvana.html">SHYVANA</a> </li>
-              <li><a href="/TDS/pages/VideosResubidos/pyke.html">PYKE</a></li>
-              <li><a href="/TDS/pages/VideosResubidos/zed.html">ZED</a></li>
-              <li><a href="/TDS/pages/VideosResubidos/problemasT.html">PROBLEMAS T</a></li>
+              <li><a href="../pages/VideosResubidos/shyvana.html">SHYVANA</a> </li>
+              <li><a href="../pages/VideosResubidos/pyke.html">PYKE</a></li>
+              <li><a href="../pages/VideosResubidos/zed.html">ZED</a></li>
+              <li><a href="../pages/VideosResubidos/problemasT.html">PROBLEMAS T</a></li>
             </ul>
           </nav>    
           </div>
@@ -137,15 +137,9 @@
       </div>
       <footer>
         <div class="container">
-          <a href="/TDS/index.html"
-          ><img
-          src="/TDS/images/ATRAS.png"
-          width="200"
-          height="150"
-          alt="volvamos al menu"
-          /></a>
+          <a href="../index.html"><img src="../images/ATRAS.png" width="200"height="150"alt="volvamos al menu"/></a>
         </div>
-        </footer>
+      </footer>
   </body>
 </html>
 
