--- a/pages/VideosResubidos/pyke.html
+++ b/pages/VideosResubidos/pyke.html
@@ -42,12 +42,12 @@
           <nav class="navegacion d-none d-md-block justify-content-between">
             <ul>
               <li>
-                <a href="/TDS/pages/VideosResubidos/shyvana.html">SHYVANA</a>
+                <a href="../pages/VideosResubidos/shyvana.html">SHYVANA</a>
               </li>
-              <li><a href="/TDS/pages/VideosResubidos/pyke.html">PYKE</a></li>
-              <li><a href="/TDS/pages/VideosResubidos/zed.html">ZED</a></li>
+              <li><a href="../pages/VideosResubidos/pyke.html">PYKE</a></li>
+              <li><a href="../pages/VideosResubidos/zed.html">ZED</a></li>
               <li>
-                <a href="/TDS/pages/VideosResubidos/problemasT.html"
+                <a href="../pages/VideosResubidos/problemasT.html"
                   >PROBLEMAS T</a
                 >
               </li>
@@ -141,9 +141,9 @@
     </div>
     <footer>
       <div class="container">
-        <a href="/TDS/index.html"
+        <a href="../index.html"
           ><img
-            src="/TDS/images/ATRAS.png"
+            src="../images/ATRAS.png"
             width="200"
             height="150"
             alt="volvamos al menu"
