--- a/pages/VideosResubidos/zed.html
+++ b/pages/VideosResubidos/zed.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/TDS/style/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Uchen&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/TDS/style/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Uchen&display=swap"
+      rel="stylesheet"
+    />
     <title>Videos Resubidos</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
@@ -30,96 +33,116 @@
       integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
       crossorigin="anonymous"
     ></script>
-    </head>
+  </head>
   <body>
     <header class="header">
       <div class="container">
-        <h1 class="header__h1"> Videos Resubidos</h1>
-        <div id="menu" class="menu">
-          <div id="menu" class="header__menu">
-            <nav class="navegacion d-none d-md-block  justify-content-between">
-              <ul> 
-                <li><a href="/TDS/pages/VideosResubidos/shyvana.html">SHYVANA</a> </li>
-                <li><a href="/TDS/pages/VideosResubidos/pyke.html">PYKE</a></li>
-                <li><a href="/TDS/pages/VideosResubidos/zed.html">ZED</a></li>
-                <li><a href="/TDS/pages/VideosResubidos/problemasT.html">PROBLEMAS T</a></li>
-              </ul>
-            </nav>    
+        <h1 class="header__h1">Videos Resubidos</h1>
+        <div id="menu" class="header__menu">
+          <nav class="navegacion d-none d-md-block justify-content-between">
+            <ul>
+              <li>
+                <a href="../pages/VideosResubidos/shyvana.html">SHYVANA</a>
+              </li>
+              <li><a href="../pages/VideosResubidos/pyke.html">PYKE</a></li>
+              <li><a href="../pages/VideosResubidos/zed.html">ZED</a></li>
+              <li>
+                <a href="../pages/VideosResubidos/problemasT.html"
+                  >PROBLEMAS T</a
+                >
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="dropdown d-md-none">
+          <button
+            type="button"
+            class="btn btn-primary"
+            data-bs-toggle="modal"
+            data-bs-target="#staticBackdrop"
+          >
+            Videos Resubidos
+          </button>
+          <div
+            class="modal fade"
+            id="staticBackdrop"
+            data-bs-backdrop="static"
+            data-bs-keyboard="false"
+            tabindex="-1"
+            aria-labelledby="staticBackdropLabel"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3 class="modal-title" id="staticBackdropLabel">
+                    Videos Resubidos
+                  </h3>
+                  <button
+                    type="button"
+                    class="btn-close"
+                    data-bs-dismiss="modal"
+                    aria-label="Close"
+                  ></button>
+                </div>
+                <div class="modal-body">
+                  <div class="container">
+                    <ul>
+                      <li>
+                        <a class="links" href="../VideosResubidos/shyvana.html"
+                          >Shyvana 3vs5</a
+                        >
+                      </li>
+                      <li>
+                        <a class="links" href="../VideosResubidos/pyke.html"
+                          >Pyke R casi perfectas</a
+                        >
+                      </li>
+                      <li>
+                        <a class="links" href="../VideosResubidos/zed.html"
+                          >Zed el mejor ninja</a
+                        >
+                      </li>
+                      <li>
+                        <a
+                          class="links"
+                          href="../VideosResubidos/problemasT.html"
+                          >Problemas Tecnicos</a
+                        >
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
             </div>
-      <div class="dropdown d-md-none">
-        <button
-  type="button"
-  class="btn btn-primary"
-  data-bs-toggle="modal"
-  data-bs-target="#staticBackdrop"
->
-  Videos Resubidos
-</button>
-<div
-  class="modal fade"
-  id="staticBackdrop"
-  data-bs-backdrop="static"
-  data-bs-keyboard="false"
-  tabindex="-1"
-  aria-labelledby="staticBackdropLabel"
-  aria-hidden="true"
->
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h3 class="modal-title" id="staticBackdropLabel">Videos Resubidos</h3>
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="modal"
-          aria-label="Close"
-        ></button>
-      </div>
-      <div class="modal-body">
-        <div class="container">
-          <ul>
-            <li>
-              <a class="links" href="/TDS/pages/Videos resubidos/shyvana.html">Shyvana 3vs5</a>
-            </li>
-            <li><a class="links" href="/TDS/pages/Videos resubidos/pyke.html">Pyke R casi perfectas</a></li>
-            <li><a class="links" href="/TDS/pages/Videos resubidos/zed.html">Zed el mejor ninja</a></li>
-            <li>
-              <a class="links" href="/TDS/pages/Videos resubidos/problemasT.html"
-                >Problemas Tecnicos</a
-              >
-            </li>
-          </ul>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
-</div>
-      </div> 
-    </div>
-      <br>
+      <br />
     </header>
     <div class="container">
       <p class="arial">
-        En esta jugada podemos ver como el Ninja se hace una .... mejor miralo por vos mismo
-      </p>      
+        En esta jugada podemos ver como el Ninja se hace una .... mejor miralo
+        por vos mismo
+      </p>
       <video
-      poster="/TDS/images/Zed.png"
-      controls
-      src="/TDS/videos/11-7-la2-1011054702-01_RZ4mFXOK_72r5.mp4"
-      width="100%"
-      height="100%"
+        poster="../images/ATRAS.png"
+        controls
+        src="/TDS/videos/11-7-la2-1011054702-01_RZ4mFXOK_72r5.mp4"
+        width="100%"
+        height="100%"
       ></video>
     </div>
     <footer>
       <div class="container">
-        <a href="/TDS/index.html"
-        ><img
-        src="/TDS/images/ATRAS.png"
-        width="200"
-        height="150"
-        alt="volvamos al menu"
+        <a href="../index.html"
+          ><img
+            src="../images/ATRAS.png"
+            width="200"
+            height="150"
+            alt="volvamos al menu"
         /></a>
       </div>
-      </footer>
+    </footer>
   </body>
 </html>
