--- a/pages/ListaDeVideos.html
+++ b/pages/ListaDeVideos.html
@@ -38,10 +38,10 @@
         <div id="menu" class="header__menu">
           <nav class="navegacion d-none d-md-block  justify-content-between">
             <ul> 
-              <li><a href="/TDS/pages/VideosResubidos/shyvana.html">SHYVANA</a> </li>
-              <li><a href="/TDS/pages/VideosResubidos/pyke.html">PYKE</a></li>
-              <li><a href="/TDS/pages/VideosResubidos/zed.html">ZED</a></li>
-              <li><a href="/TDS/pages/VideosResubidos/problemasT.html">PROBLEMAS T</a></li>
+              <li><a href="../pages/VideosResubidos/shyvana.html">SHYVANA</a> </li>
+              <li><a href="../pages/VideosResubidos/pyke.html">PYKE</a></li>
+              <li><a href="../pages/VideosResubidos/zed.html">ZED</a></li>
+              <li><a href="../pages/VideosResubidos/problemasT.html">PROBLEMAS T</a></li>
             </ul>
           </nav>    
           </div>
@@ -78,12 +78,12 @@
         <div class="container">
           <ul>
             <li>
-              <a class="links" href="/TDS/pages/Videos resubidos/shyvana.html">Shyvana 3vs5</a>
+              <a class="links" href="../pages/VideosResubidos/shyvana.html">Shyvana 3vs5</a>
             </li>
-            <li><a class="links" href="/TDS/pages/Videos resubidos/pyke.html">Pyke R casi perfectas</a></li>
-            <li><a class="links" href="/TDS/pages/Videos resubidos/zed.html">Zed el mejor ninja</a></li>
+            <li><a class="links" href="../pages/VideosResubidos/pyke.html">Pyke R casi perfectas</a></li>
+            <li><a class="links" href="../pages/VideosResubidos/zed.html">Zed el mejor ninja</a></li>
             <li>
-              <a class="links" href="/TDS/pages/Videos resubidos/problemasT.html"
+              <a class="links" href="../pages/VideosResubidos/problemasT.html"
                 >Problemas Tecnicos</a
               >
             </li>
@@ -113,10 +113,10 @@
             <img src="https://images5.alphacoders.com/983/983436.jpg " data-bs-interval="100"class="d-block w-100" alt="pyke">
           </div>
           <div class="carousel-item">
-            <img src="/TDS/images/LaCaja.jpg" data-bs-interval="100" height="400vh" class="d-block w-100" alt="charlas">
+            <img src="../images/LaCaja.jpg" data-bs-interval="100" height="400vh" class="d-block w-100" alt="charlas">
           </div>
           <div class="carousel-item active">
-            <img src="/TDS/images/taberna.jpeg" data-bs-interval="100" class="d-block w-100" alt="copitas">
+            <img src="../images/taberna.jpeg" data-bs-interval="100" class="d-block w-100" alt="copitas">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -132,15 +132,9 @@
     </div>
     <footer>
       <div class="container">
-        <a href="/TDS/index.html"
-        ><img
-        src="/TDS/images/ATRAS.png"
-        width="200"
-        height="150"
-        alt="volvamos al menu"
-        /></a>
+        <a href="../index.html"><img src="../images/ATRAS.png" width="200"height="150"alt="volvamos al menu"/></a>
       </div>
-      </footer>
+    </footer>
   
   </body>
 </html>
