--- a/pages/VideosResubidos/shyvana.html
+++ b/pages/VideosResubidos/shyvana.html
@@ -134,7 +134,7 @@
       <video
         poster="https://pbs.twimg.com/media/CiNHibOWEAAgG3n.jpg"
         controls
-        src="/TDS/videos/4vs5-sin-adc-en-plena-ranked-pero-todo-es-mas-facil-con-shyvana-full-ad_KvcyA6Zp_NVS0.mp4"
+        src="./videos/4vs5-sin-adc-en-plena-ranked-pero-todo-es-mas-facil-con-shyvana-full-ad_KvcyA6Zp_NVS0.mp4"
         width="100%"
         height="100%"
       ></video>
