--- a/pages/shyvana.html
+++ b/pages/shyvana.html
@@ -89,30 +89,20 @@
                   <div class="container">
                     <ul>
                       <li>
-                        <a
-                          class="links"
-                          href="/TDS/pages/Videos resubidos/shyvana.html"
-                          >Shyvana 3vs5</a
-                        >
+                        <a class="links" href="./shyvana.html">Shyvana 3vs5</a>
                       </li>
                       <li>
-                        <a
-                          class="links"
-                          href="/TDS/pages/Videos resubidos/pyke.html"
+                        <a class="links" href="./pyke.html"
                           >Pyke R casi perfectas</a
                         >
                       </li>
                       <li>
-                        <a
-                          class="links"
-                          href="/TDS/pages/Videos resubidos/zed.html"
+                        <a class="links" href="./zed.html"
                           >Zed el mejor ninja</a
                         >
                       </li>
                       <li>
-                        <a
-                          class="links"
-                          href="/TDS/pages/Videos resubidos/problemasT.html"
+                        <a class="links" href="./problemasT.html"
                           >Problemas Tecnicos</a
                         >
                       </li>
@@ -134,7 +124,7 @@
       <video
         poster="https://pbs.twimg.com/media/CiNHibOWEAAgG3n.jpg"
         controls
-        src="./videos/4vs5-sin-adc-en-plena-ranked-pero-todo-es-mas-facil-con-shyvana-full-ad_KvcyA6Zp_NVS0.mp4"
+        src="../videos/4vs5-sin-adc-en-plena-ranked-pero-todo-es-mas-facil-con-shyvana-full-ad_KvcyA6Zp_NVS0.mp4"
         width="100%"
         height="100%"
       ></video>
